# GaussianPro

./: .gitignore  pyproject.toml  train.py
arguments/: __init__.py
scene/: gaussian_model.py
submodules/Propagation/: Propagation.cpp  main.cpp  main.h
utils/: general_utils.py  graphics_utils.py
