[tool.poetry]
name = "GaussianPro"
version = "0.1.0"
description = ""
authors = ["nk4517 <nk4517@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = {version = "2.2.0+cu121", source = "pytorch"}
dearpygui = "1.10.1"
tqdm = "4.65.2"
rich = "13.4.2"
numpy = "1.23.5"
scikit-learn = "^1.4.1.post1"
matplotlib = "3.8.0"
opencv-python = ">=4.8,<5.0"
imageio = "^2.34.0"
imageio-ffmpeg = "^0.4.9"
omegaconf = "2.3.0"
einops = "^0.7.0"
plyfile = "^1.0.3"
pygltflib = "^1.16.1"
gradio = "4.8.0"
torchvision = {version = "^0.17.0+cu121", source = "pytorch"}
huggingface-hub = "0.19.4"
diffusers = "0.24.0"
accelerate = "0.24.1"
transformers = "4.36.2"
xatlas = "^0.0.9"
trimesh = "4.0.5"
pymcubes = "0.1.2"
pymeshlab = "2023.12"
rembg = {extras = ["cli", "gpu"], version = "^2.0.54"}
nvdiffrast = {git = "https://github.com/NVlabs/nvdiffrast.git"}
simple-knn = {path = "dist/simple_knn-0.0.0+cu121-cp311-cp311-win_amd64.whl"}
xformers = "^0.0.24"
open3d = "^0.18.0"
wandb = "^0.16.3"
natsort = "^8.4.0"
kornia = "^0.7.1"
pytorch-msssim = "^1.0.0"
torchmetrics = "^1.3.1"
cuda-python = "12.1"
cupy-cuda12x = "^13.0.0"
pyrr = "^0.10.3"
glfw = "^2.7.0"
pyopengl = "^3.1.7"
pcpr = {path = "dist/pcpr-0.2-cp311-cp311-win_amd64.whl"}
diff-gaussian-rasterization = {path = "submodules/diff-gaussian-rasterization/dist/diff_gaussian_rasterization-0.0.0-cp311-cp311-win_amd64.whl"}
knn-cuda = {path = "submodules/KNN_CUDA/dist/KNN_CUDA-0.2-py3-none-any.whl"}
pynanoflann = {path = "submodules/pynanoflann/dist/pynanoflann-0.0.8-cp311-cp311-win_amd64.whl"}
pytorch3d = {path = "dist/pytorch3d-0.7.6-cp311-cp311-win_amd64.whl"}
swig = "^4.2.1"
tensorboard = "^2.16.2"
imgui = "^2.0.0"
imgui-bundle = "^1.3.0"
imagecodecs = "^2024.1.1"
diff-gauss = {path = "X:/_ai/_demos/_gsplat/gaussian_viewer/gaussian-splatting/submodules/diff-gaussian-rasterization/dist/diff_gauss-1.0.5-cp311-cp311-win_amd64.whl"}
pyglm = "^2.7.1"
awscli = "^1.32.57"
imgviz = "^1.7.5"
evo = "1.11.0"
diff-gaussian-rasterization-rmurai0610 = {path = "dist/diff_gaussian_rasterization_rmurai0610-0.0.0-cp311-cp311-win_amd64.whl"}
mypy = "^1.9.0"
devtools = "^0.12.2"

[tool.poetry.group.dev.dependencies]
wheel = "^0.42.0"
build = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

